# Thunder

./: CMakeLists.txt  README.md
include/gameLayer/: bullet.h  enemy.h  gameLayer.h  tileRenderer.h
include/platform/: Input.h  assertion.h  otherPlatformFunctions.h
src/gameLayer/: bullet.cpp  enemy.cpp  gameLayer.cpp  tileRenderer.cpp
src/platform/: Input.cpp  glfwMain.cpp
